--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 <body>
     <h1>Hello world</h1>
     <img src="images/צילום מסך 2025-05-14 115147.png"/>
+    <p>
+        lorem ipsur...
+    </p>
 </body>
 </html>
