add span from local machine

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
         lorem ipsur...
     </p>
     <a href="https://www.googel.com ">to googel site</a>
+    <span>Lokal text</span>
 </body>
 </html>
