--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     <a href="https://www.googel.com ">to googel site</a>
     <span>Lokal text</span>
     <p>change made by remote</p>
-
+    <span class="another-span">another span from local</span>
 </body>
 </html>
