--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Hello world</h1>
     <img src="images/צילום מסך 2025-05-14 115147.png"/>
     <p>
-        lorem ipsur...
+        lorem ipsur...!!!@@
     </p>
     <a href="https://www.googel.com ">to googel site</a>
     <span>Lokal text</span>
