add conflict to index.html

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <a href="https://www.googel.com ">to googel site</a>
     <span>Lokal text</span>
     <p>change made by remote</p>
+    <p>add conflict</p>
     <span class="another-span">another span from local</span>
 </body>
 </html>
